--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(Tblock_SPcontig)
 export(Tblock_SPrand)
 export(Trand_SPall)
 export(Trand_SPrand)
+export(abbr_fold_alloc_names)
 export(centralImputTrNAs)
 export(centralImputTsNAs)
 export(compressExp)
